--- a/application.conf
+++ b/application.conf
@@ -16,17 +16,19 @@ play.crypto.secret=${APPLICATION_SECRET}
 play.i18n.langs=["en"]
 
 play.http.requestHandler = "play.http.DefaultHttpRequestHandler"
-play.http.context = "${HTTP_CONTEXT}"
+play.http.context = ${HTTP_CONTEXT}
 play.application.loader=loader.KafkaManagerLoader
 
 kafka-manager.zkhosts=${ZK_HOSTS}
 pinned-dispatcher.type="PinnedDispatcher"
 pinned-dispatcher.executor="thread-pool-executor"
+application.home="/app"
 application.features=["KMClusterManagerFeature","KMTopicManagerFeature","KMPreferredReplicaElectionFeature","KMReassignPartitionsFeature"]
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "${KAFKA_MANAGER_LOGLEVEL}"
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  loglevel = ${KAFKA_MANAGER_LOGLEVEL}
 }
 
 
