support changing base-zk-path

--- a/application.conf
+++ b/application.conf
@@ -20,6 +20,7 @@ play.http.context = ${HTTP_CONTEXT}
 play.application.loader=loader.KafkaManagerLoader
 
 kafka-manager.zkhosts=${ZK_HOSTS}
+kafka-manager.base-zk-path=${BASE_ZK_PATH}
 pinned-dispatcher.type="PinnedDispatcher"
 pinned-dispatcher.executor="thread-pool-executor"
 application.home="/app"
