Support configuration of akka.logger-startup-timeout (fix #1)

--- a/application.conf
+++ b/application.conf
@@ -32,6 +32,7 @@ akka {
   loglevel = ${KAFKA_MANAGER_LOGLEVEL}
 }
 
+akka.logger-startup-timeout = ${LOGGER_STARTUP_TIMEOUT}
 
 basicAuthentication.enabled=false
 basicAuthentication.enabled=${?KAFKA_MANAGER_AUTH_ENABLED}
